--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <header>
-        <h3>G3 Architects</h3>
-        <nav>
+
+        <nav class="nav_title">
+            <h3>G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -19,6 +20,17 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner_content">
+                <h1 class="banner title">Brand New <br>Group of Architects </h1>
+                <p class="banner_discription">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look
+                    even</p>
+                <button class="btn_primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
 
     <main>
