--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- header starting -->
     <header>
 
         <nav class="nav_title">
@@ -32,9 +33,28 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
-
+    <!-- header end -->
     <main>
+        <!-- team section start -->
+        <section class="teams_container">
+            <div class="teams_img_container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
 
+            <div class="team_content">
+                <h3 class="teams_title"><span class="quick_list">Quick list</span> of Our <span
+                        class="features">Features</span></h3>
+
+
+                <p class="teams_description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn_primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
