fact section complite

--- a/index.html
+++ b/index.html
@@ -55,6 +55,44 @@
                 <button class="btn_primary">Explore More</button>
             </div>
         </section>
+        <!-- feature section -->
+        <section class="features">
+
+        </section>
+        <!-- facts section -->
+        <section class="facts">
+            <h3 class="some_facts">Some Facts</h3>
+            <p class="facts_discription">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
+
+            <div class="facts_card_container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card_status">54</h2>
+                    <p class="card_title">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card_status">1458</h2>
+                    <p class="card_title">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card_status">590</h2>
+                    <p class="card_title">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card_status">22578</h2>
+                    <p class="card_title">Email Send</p>
+                </div>
+            </div>
+
+
+
+
+        </section>
+
     </main>
     <footer>
 
