--- a/index.html
+++ b/index.html
@@ -87,12 +87,20 @@
                     <p class="card_title">Email Send</p>
                 </div>
             </div>
-
-
-
-
         </section>
+        <section class="sponser">
+            <h3 class="section_title">Our Sponspors</h3>
+            <p class="section_discription">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
 
+            <div class="sponser_img_container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
