complite main section and mainsection response

--- a/index.html
+++ b/index.html
@@ -56,8 +56,45 @@
             </div>
         </section>
         <!-- feature section -->
-        <section class="features">
+        <section class="mid_featuress">
+            <div class="mid_featuress_content">
+                <h3 class="enjoy">Features you will love & enjoy</h3>
+                <p class="small_text_mid_color">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="small_text_mid_color">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="small_text_mid_color">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="small_text_mid_color">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="small_text_mid_color">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+            </div>
+            <div class="mid_featuress_img">
+                <img src="images/architect.png" alt="">
+                <div class="ten_year_badge">
+                    <h2>10+Year</h2>
+                    <p>Experience</p>
+                </div>
 
+            </div>
         </section>
         <!-- facts section -->
         <section class="facts">
@@ -88,6 +125,7 @@
                 </div>
             </div>
         </section>
+        <!-- sponser section -->
         <section class="sponser">
             <h3 class="section_title">Our Sponspors</h3>
             <p class="section_discription">There are many variations of passages of Lorem Ipsum available, but the
